[package]
name = "hifive1"
version = "0.10.0"
repository = "https://github.com/riscv-rust/hifive1"
authors = ["David Craven <david@craven.ch>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Board support crate for HiFive1 and LoFive boards"
keywords = ["riscv", "register", "peripheral"]
license = "ISC"
edition = "2021"

[dependencies]
e310x-hal = {git = "https://github.com/greenlsi/e310x-hal"}
embedded-hal = "0.2.5"
riscv = { version = "0.12.0", features = ["critical-section-single-hart"]}
riscv-rt = "0.13.0"
nb = "1.0.0"
panic-halt = "0.2.0"

[features]
board-hifive1 = []
board-hifive1-revb = ["e310x-hal/g002"]
board-redv = ["e310x-hal/g002"]
board-lofive = []
board-lofive-r1 = ["e310x-hal/g002"]
v-trap = ["e310x-hal/v-trap"]

[package.metadata.docs.rs]
features = ['board-hifive1-revb']
